# tursu

./: .editorconfig  CHANGELOG.md  Justfile  README.md  pyproject.toml
.github/workflows/: publish-doc.yml  publish-dockerhub.yml  publish-pypi.yml  release.yml  tests-artifacts.yml  tests.yml
docker/: Dockerfile
docs/source/: advanced_datatable.md  advanced_docstring.md  conf.py  developper.md  gherkin_in_a_nutchell.md  index.md  introduction.md  matching_steps.md  migrate_from_behave.md  migrate_from_pytest_bdd.md  project_layout.md  scenario_outline.md  step_definition.md  using_tags.md  working_with_fixtures.md  working_with_playwright.md  working_with_playwright_async.md
docs/source/develop/: index.rst
scripts/: get_version.py  write_changelog.py
src/tursu/: __init__.py  compile_all.py  compiler.py  entrypoint.py  exceptions.py  pattern_matcher.py  plugin.py  registry.py  runner.py  steps.py
src/tursu/entrypoints/: cli.py  plugin.py
src/tursu/runtime/: exceptions.py  pattern_matcher.py  registry.py  runner.py
src/tursu/service/: compiler.py
src/tursu/shared/: utils.py
tests/: conftest.py
tests/functionals/: 02_use_fixtures.feature  03_background.feature  04_docstring.feature  04_rule.feature  05_docstring.feature  06_tag.feature  07_scenario_outlines.feature  08_datatable.feature  09_regexpattern.feature  background.feature  conftest.py  docstring.feature  rule.feature  scenario_outlines.feature  steps.py  tag.feature
tests/functionals/01_simplescenario/: scenario.feature  steps.py
tests/functionals/02_usefixtures/: conftest.py  scenario.feature  steps.py
tests/functionals/asyncstep/: steps.py
tests/functionals/datatable/: datatable.feature  steps.py
tests/unittests/: conftest.py  test_compiler.py  test_entrypoint.py  test_model.py  test_pattern_matcher.py  test_plugin.py  test_registry.py  test_runner.py  test_step.py  test_testmod.py
tests/using_fixtures/: conftest.py  login.feature  steps.py
tests/using_playwright/: 01_basic.feature  __init__.py  conftest.py  steps.py
tests/using_playwright_async/: 01_basic.feature  conftest.py  steps.py
(+85 files in other folders)
